tests/neg-custom-args/captures/vars.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:11:26 -----------------------------------------
11 |  val _: () ->{} String = z  // error
   |                          ^
   |                          Found:    (z : () ->{cap1, x.rd} String)
   |                          Required: () -> String
   |
   |                          Note that capability `cap1` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:14:24 -----------------------------------------
14 |  val z2c: () -> Unit = z2 // error
   |                        ^^
   |                        Found:    (z2 : () ->{x} Unit)
   |                        Required: () -> Unit
   |
   |                        Note that capability `x` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:25:8 ------------------------------------------
25 |    a = x => g(x)      // error
   |        ^^^^^^^^^
   |        Found:    (x: String) ->{cap3} String
   |        Required: String ->{cap1} String
   |
   |        Note that capability `cap3` cannot be included in capture set {cap1} of variable a.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:26:8 ------------------------------------------
26 |    a = g      // error
   |        ^
   |        Found:    (x: String) ->{cap3} String
   |        Required: String ->{cap1} String
   |
   |        Note that capability `cap3` cannot be included in capture set {cap1} of variable a.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:28:12 -----------------------------------------
28 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[String ->{cap3} String]
   |        Required: List[String ->{cap1, cap2} String]
   |
   |        Note that capability `cap3` is not included in capture set {cap1, cap2}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:37:10 -----------------------------------------
37 |  local { cap3 => // error
   |          ^
   |    Capability `cap3` outlives its scope: it leaks into outer capture set {cap3²} which is owned by method test.
   |    The leakage occurred when trying to match the following types:
   |
   |    Found:    (cap3: CC^) ->'s1 String ->{cap3} String
   |    Required: CC^ -> String ->{cap3²} String
   |
   |    where:    ^     refers to the root capability caps.any
   |              cap3  is a reference to a value parameter
   |              cap3² is a parameter in an anonymous function in method test
   |
38 |    def g(x: String): String = if cap3 == cap3 then "" else "a"
39 |    g
   |
   | longer explanation available when compiling with `-explain`
